[desk-tool] Auto collapse fixes (#1103)
* [desk-tool] Fixes a bug where panes did not load when switching
* [components] Trick to avoid unmounting of pane
* [components] Use Component over PureComponent

--- a/packages/@sanity/components/src/panes/styles/SplitController.css
+++ b/packages/@sanity/components/src/panes/styles/SplitController.css
@@ -44,6 +44,10 @@
   @nest & :global(.Pane2) {
     display: none;
   }
+
+  @nest & .Resizer {
+    display: none;
+  }
 }
 
 .Resizer {
@@ -88,4 +92,9 @@
 
 .lastPane .Resizer {
   display: none;
+}
+
+.hideResize > .splitPane > .Resizer {
+  display: none;
+  border: 10px solid red !important;
 }
